--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,34 +2,31 @@
   <a style="cursor: pointer" (click)="opensidebar()">{{verzioesbuild}}</a>
 </div>
 
-<div id="sidebar" class="sidebar" role="dialog"  data-backdrop="true" data-keyboard="false">
-  <div class="sidebar-content">
+<div id="sidebar" class="sidebar-modal" role="dialog"  data-backdrop="true" data-keyboard="false">
+  <div class="sidebar-modal-content">
+
     <div style="margin-bottom: 1em">
       <a style="cursor: pointer" (click)="closesidebar()"><i class="fa fa-close" aria-hidden="true"></i></a>
     </div>
-    <div>
-      <ul>
-        <li class="sidebar-menu" *ngFor="let node of angularmenudto;let i = index">
-          <a (click)="setselected(i)">{{node.Title}}</a>
 
-          <ng-container *ngIf="i === selected">
-            <div style="margin-bottom: 0.5em"></div>
-            <ul>
-              <li class="sidebar-menuitem" *ngFor="let item of node.Sub">
-                <a *ngIf="item.Title !== 'divider' && item.Enabled" (click)="menuclick(item.RouterLink)">
-                  {{item.Title}}
-                </a>
-                <a *ngIf="item.Title !== 'divider' && !item.Enabled"
-                   style="color: silver;cursor: not-allowed">
-                  {{item.Title}}
-                </a>
-                <div class="sidebar-divider" *ngIf="item.Title === 'divider'">
-                </div>
-              </li>
-            </ul>
-          </ng-container>
-        </li>
-      </ul>
+    <div *ngFor="let node of angularmenudto;let i = index">
+      <div class="sidebar-item">
+        <a (click)="setselected(i)">{{node.Title}}</a>
+      </div>
+
+      <ng-container *ngIf="i === selected">
+        <div style="margin-left: 3em" *ngFor="let item of node.Sub">
+          <div class="sidebar-item" *ngIf="item.Title !== 'divider' && item.Enabled">
+            <a (click)="menuclick(item.RouterLink)">{{item.Title}}</a>
+          </div>
+          <div class="sidebar-item-disabled" *ngIf="item.Title !== 'divider' && !item.Enabled">
+            {{item.Title}}
+          </div>
+          <div class="sidebar-item-divider" *ngIf="item.Title === 'divider'">
+          </div>
+        </div>
+      </ng-container>
     </div>
+
   </div>
 </div>
