--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -14,6 +14,7 @@
 @import 'modal';
 @import 'tabla';
 @import 'spinner';
+@import 'navbar';
 
 html, body {
   font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
