--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <div class="editform-row">
       <div class="editform-label">{{item.TetelTipus}}</div>
-      <input type="text" class="editform-edit zoomedit em20width" id="cikk"
+      <input type="text" class="editform-edit zoomedit cikkwidth" id="cikk"
              maxlength="100" autocomplete="off"
              [(ngModel)]="item.CikkNev" name="cikk">
       <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
