--- a/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
@@ -2,165 +2,71 @@
   <h5 *ngIf="teteluj">Új {{bizonylatLeiro.BizonylatNev | lowercase}}tétel</h5>
   <h5 *ngIf="!teteluj">{{bizonylatLeiro.BizonylatNev}}tétel módosítása</h5>
 
-  <div class="editform-card">
-    <div class="editform-row">
-    <div class="editform-row-block">
-        <div class="editform-label">Termékdíjas</div>
-        <select type="text" class="editform-combo" name="termekdijas"
-                [disabled]="!szvesz"
-                [(ngModel)]="TetelDtoEdited.Termekdijas"
-                (change)="tetelcalc($event)">
-          <option value="false">Nem</option>
-          <option value="true">Igen</option>
-        </select>
-    </div>
+  <form [formGroup]="formTetel" (ngSubmit)="onSubmit()" autocomplete="off">
 
-    <div class="editform-row-block">
-        <div class="editform-label">Közvetített</div>
-        <select type="text" class="editform-combo" name="kozvetitett"
-                [disabled]="!szvesz"
-                [(ngModel)]="TetelDtoEdited.Kozvetitettszolgaltatas">
-          <option value="false">Nem</option>
-          <option value="true">Igen</option>
-        </select>
-    </div>
-
-    <div class="editform-row-block">
-        <div class="editform-label">Előleg</div>
-        <select type="text" class="editform-combo" name="eloleg"
-                [disabled]="!szvesz"
-                [(ngModel)]="TetelDtoEdited.Ezeloleg">
-          <option value="false">Nem</option>
-          <option value="true">Igen</option>
-        </select>
-    </div>
-    </div>
-
-    <div class="editform-row">
-        <div class="editform-label">Megnevezés</div>
-        <input type="text" class="editform-edit zoomedit cikkwidth" id="megnevezes" name="megnevezes"
-               [(ngModel)]="TetelDtoEdited.Megnevezes"
-               maxlength="100" required autocomplete="off">
-        <button class="toolbutton" (click)="CikkZoom()" type="button">...</button>
-    </div>
-
-    <div class="editform-row">
-      <div class="editform-row-block">
-          <div class="editform-label">Mennyiség</div>
-          <input type="number" class="editform-number" id="mennyiseg" name="mennyiseg"
-                 [(ngModel)]="TetelDtoEdited.Mennyiseg"
-                 (focusout)="tetelcalc($event)"
-                 required min="0">
+    <div class="editform-card">
+      <div class="editform-row">
+          <div class="editform-label">Megnevezés</div>
+          <input type="text" class="editform-edit zoomedit cikkwidth" formControlName="megnevezes">
+          <button class="toolbutton" (click)="CikkZoom()" type="button">...</button>
       </div>
+
+      <div class="editform-row">
+        <div class="editform-row-block">
+            <div class="editform-label">Mennyiség</div>
+            <input type="number" class="editform-number" formControlName="mennyiseg" (focusout)="tetelcalc($event)">
+        </div>
+
+        <div class="editform-row-block">
+            <div class="editform-label">Me</div>
+            <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="me">
+            <button class="toolbutton" (click)="MeZoom()" type="button">...</button>
+        </div>
+      </div>
+
+      <div class="editform-row">
+          <div class="editform-label">Egységár</div>
+          <input type="number" class="editform-number" formControlName="egysegar" (focusout)="tetelcalc($event)">
+          <button class="toolbutton" (click)="bruttobol()" type="button"><- Br</button>
+          <input type="number" class="editform-number" formControlName="bruttoosszeg">
+      </div>
+
+      <div class="editform-row">
+          <div class="editform-label">ÁFA kulcs</div>
+          <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="afakulcs">
+          <button class="toolbutton" (click)="AfakulcsZoom()" type="button">...</button>
+      </div>
+
+    </div>
+
+    <div class="editform-row-bottom">
+      <div class="editform-label">Megjegyzés</div>
+      <input type="text" class="editform-edit megjegyzeswidth" formControlName="megjegyzes">
+    </div>
+
+    <div class="editform-row-bottom">
       <div class="editform-row-block">
-          <div class="editform-label">Me</div>
-          <input type="text" class="editform-edit zoomedit kisprimitivwidth" id="me" name="me"
-                 [(ngModel)]="TetelDtoEdited.Me"
-                 maxlength="10" required autocomplete="off">
-          <button class="toolbutton" (click)="MeZoom()"
-                  type="button">...</button>
+        <div class="editform-label">Netto</div>
+        <input type="number" class="editform-number" formControlName="netto">
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">ÁFA</div>
+        <input type="number" class="editform-number" formControlName="afa">
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">Brutto</div>
+        <input type="number" class="editform-number" formControlName="brutto">
       </div>
     </div>
 
-    <div class="editform-row">
-        <div class="editform-label">Egységár</div>
-        <input type="number" class="editform-number" id="egysegar" name="egysegar"
-               [(ngModel)]="TetelDtoEdited.Egysegar"
-               (focusout)="tetelcalc($event)"
-               required>
-        <button class="toolbutton" (click)="bruttobol()"
-                type="button"><- Br</button>
-        <input type="number" class="editform-number" id="bruttoosszeg" name="bruttoosszeg"
-               [(ngModel)]="bruttoosszeg">
-    </div>
-    <div class="editform-row">
-        <div class="editform-label">ÁFA kulcs</div>
-        <input type="text" class="editform-edit zoomedit kisprimitivwidth" id="afakulcs" name="afakulcs"
-               [(ngModel)]="TetelDtoEdited.Afakulcs"
-               maxlength="10" required autocomplete="off">
-        <button class="toolbutton" (click)="AfakulcsZoom()"
-                type="button">...</button>
+    <div class="editform-row-bottom">
+      <button class="toolbutton okbutton" type="submit">Ok</button>
+      <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
 
-  </div>
-
-  <div class="editform-card">
-    <div class="editform-row">
-      <div class="editform-label">Tömeg, kg</div>
-      <input type="number" class="editform-number" id="tomegkg" name="tomegkg"
-             [(ngModel)]="TetelDtoEdited.Tomegkg"
-             (focusout)="tetelcalc($event)"
-             min="0">
-    </div>
-
-    <div class="editform-row">
-        <div class="editform-label">Termékdíj KT</div>
-        <input type="text" class="editform-edit zoomedit primitivwidth" id="termekdijkt" name="termekdijkt"
-               [(ngModel)]="TetelDtoEdited.Termekdijkt"
-               maxlength="10" autocomplete="off">
-        <button class="toolbutton" (click)="TermekdijZoom()" type="button">...</button>
-        <button class="toolbutton" (click)="TermekdijTorles()" type="button">
-          <i class="fa fa-close" aria-hidden="true"></i>
-        </button>
-    </div>
-
-    <div class="editform-row">
-        <div class="editform-label">Termékdíj megnevezés</div>
-        <input type="text" class="editform-edit em20width" id="termekdijmegnevezes" name="termekdijmegnevezes"
-               [(ngModel)]="TetelDtoEdited.Termekdijmegnevezes"
-               disabled="true" autocomplete="off">
-    </div>
-
-    <div class="editform-row">
-        <div class="editform-label">Termékdíj egységár</div>
-        <input type="number" class="editform-number" id="termekdijegysegar" name="termekdijegysegar"
-               [(ngModel)]="TetelDtoEdited.Termekdijegysegar"
-               (focusout)="tetelcalc($event)"
-               readonly="true">
-    </div>
-
-    <div class="editform-row">
-      <div class="editform-label">Termékdíj a brutto árból</div>
-      <input type="number" class="editform-number" id="terekdijabruttoarbol" name="terekdijabruttoarbol"
-             [(ngModel)]="TetelDtoEdited.Termekdij"
-             disabled="true">
-    </div>
-  </div>
-
-  <div class="editform-row-bottom">
-    <div class="editform-label">Megjegyzés</div>
-    <input type="text" class="editform-edit megjegyzeswidth" id="megjegyzes" name="megjegyzes"
-           [(ngModel)]="TetelDtoEdited.Megjegyzes"
-           autocomplete="off">
-  </div>
-
-  <div class="editform-row-bottom">
-    <div class="editform-row-block">
-      <div class="editform-label">Netto</div>
-      <input type="number" class="editform-number" id="netto" name="netto"
-             [(ngModel)]="TetelDtoEdited.Netto"
-             disabled="true">
-    </div>
-
-    <div class="editform-row-block">
-      <div class="editform-label">ÁFA</div>
-      <input type="number" class="editform-number" id="afa" name="afa"
-             [(ngModel)]="TetelDtoEdited.Afa"
-             disabled="true">
-    </div>
-
-    <div class="editform-row-block">
-      <div class="editform-label">Brutto</div>
-      <input type="number" class="editform-number" id="brutto" name="brutto"
-             [(ngModel)]="TetelDtoEdited.Brutto"
-             disabled="true">
-    </div>
-  </div>
-
-  <div class="editform-row-bottom">
-    <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
-    <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
-  </div>
+  </form>
 
 <!--  export enum BizonylattetelSzerkesztesMode {
   Blank = 0,
