--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -34,7 +34,7 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Klienstipus</div>
-        <select type="text" class="editform-edit em10width" formControlName="klienstipus">
+        <select type="text" class="editform-combo" formControlName="klienstipus">
           <option>Gmail</option>
         </select>
       </div>
@@ -48,7 +48,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Ssl</div>
-        <select type="text" class="editform-combo em6width" formControlName="ssl">
+        <select type="text" class="editform-combo" formControlName="ssl">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
