--- a/src/app/logon/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/logon/bejelentkezes/bejelentkezes.component.html
@@ -5,7 +5,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Azonosító</div>
-      <input type="text" class="editform-edit em10width" formControlName="azonosito">
+      <input type="text" class="editform-edit em10width" appAutofocus formControlName="azonosito">
     </div>
 
     <div class="editform-row">
