--- a/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
@@ -1,18 +1,22 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{ajanlatkeresservice.cim}}</h5>
-  <app-toolbar [Szurok]="szurok"
-               [(szempont)]="szempont"
-               [(minta)]="minta"
-               (Kereses)="onKereses()"
-               [visUj]="false">
+  <app-toolbar [Szurok]="szurok" [(szempont)]="szempont" [(minta)]="minta" (Kereses)="onKereses()"
+               [visUj]="true" [enUj]="jog" (Uj)="doUjtetel()">
   </app-toolbar>
 
   <app-tabla #tabla
              [items]="Dto"
              [colsets]="ajanlatkeresservice.GridSettings"
              (forid)="onId($event)"
+             [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
+  <ng-template #griduj>
+    <app-ajanlatkeres-szerkesztes [uj] = "true"
+                              (eventSzerkeszteskesz)="onUjtetelkesz($event)">
+    </app-ajanlatkeres-szerkesztes>
+  </ng-template>
 
   <ng-template #gridegy>
     <div class="alapkeret">
@@ -20,6 +24,12 @@
         <div>
             <button (click)="doNav(1)" class="toolbutton">
               <i class="fa fa-file" aria-hidden="true"></i>
+            </button>
+            <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+            <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
+              <i class="fa fa-edit" aria-hidden="true"></i>
             </button>
             <button (click)="doNav(8)" class="toolbutton">
               Projekt
@@ -33,6 +43,21 @@
                          [item]="Dto[DtoSelectedIndex]"
                          [colsets]="ajanlatkeresservice.ReszletekSettings">
           </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="ajanlatkeresservice.cim"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-ajanlatkeres-szerkesztes [uj]="false"
+                                    [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                    (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-ajanlatkeres-szerkesztes>
         </div>
       </ng-container>
 
