--- a/src/app/ajanlatkeres/ajanlatkeres-szerkesztes/ajanlatkeres-szerkesztes.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-szerkesztes/ajanlatkeres-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Név</div>
-      <input type="text" class="editform-edit ugyfelwidth" formControlName="nev">
+      <input type="text" class="editform-edit ugyfelwidth" appAutofocus formControlName="nev">
     </div>
     <div class="editform-row">
       <div class="editform-label">Cím</div>
