--- a/src/sass/_szinek.scss
+++ b/src/sass/_szinek.scss
@@ -1,7 +1,7 @@
 $hatterszin: white;
 $szovegszin: black;
 $keretszin: #dddddd;
-$kivalasztottszin: #d0e0df;
+$kivalasztottszin: #b9c7e0;
 $kontrolszin: #5d8dea;
 $zoomszin: rgba(149, 253, 189, 0.67);
 $navbarszin: #4e555b;
