--- a/src/app/tools/tabla/tabla.component.html
+++ b/src/app/tools/tabla/tabla.component.html
@@ -42,6 +42,10 @@
         </td>
       </tr>
 
+      <tr *ngIf="item.Megjegyzes !== null && item.Megjegyzes !== '' && megjegyzesIs" (click)="clickforrow(i)" style="font-size: 90%" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
+        <td colspan="100">{{item.Megjegyzes}}</td>
+      </tr>
+
       <tr *ngIf="i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
         <td colspan="100">
           <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
